# pricewatch

./: .gitignore  CHANGELOG.md  README.md  check_price.py  pricewatch_gui.py  pyproject.toml
.github/workflows/: flake8.yml  pypi.yml  sync-back.yml
src/: goldteeth.py  goldteeth_cli.py  goldteeth_gui.py  pricewatch.py  pricewatch_gui.py  pricewatcher.py  pricewatcher_gui.py
src/goldteeth/: __init__.py
