[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goldteeth"
version = "0.1.8"
description = "Monitors crypto/stock prices or volatility and plays an alert sound when a target is reached"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Will Foster (sadsfae)", email = "wfoster@pm.me" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pytz",
    "websocket-client"
]

[project.urls]
Homepage = "https://github.com/sadsfae/goldteeth"
Repository = "https://github.com/sadsfae/goldteeth"
Issues = "https://github.com/sadsfae/goldteeth/issues"

[project.scripts]
goldteeth = "goldteeth:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.semantic_release]
branch = "master"
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): v{version} [skip ci]"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
